# publirs

./: .justfile  .watch.yaml  Cargo.toml  Dockerfile  README.md  sample.env
migrations/: 20230527044912_categories.up.sql  20230527045407_polls.down.sql  20230527045407_polls.up.sql  20230527051030_answers.up.sql  20230527051030_options.down.sql  20230527051030_options.up.sql  20230527051603_tips.down.sql  20230527051603_tips.up.sql
src/: main.rs
src/http/: category.rs  mod.rs  poll.rs  publish.rs  tip.rs
src/models/: answer.rs  category.rs  error.rs  mod.rs  poll.rs  telegram.rs  tip.rs
templates/: index.html
