[package]
name = "publirs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
tokio = { version = "1.27", features = ["full", "time"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "offline", "chrono"] }
axum = { version = "0.6" }
# Axum builds on the types in Tower
tower-http = { version = "0.4", features = [ "trace", "fs", "cors" ] }

# templates
# https://docs.rs/minijinja/latest/minijinja/
minijinja = "0.33"

# logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# utilities
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dotenv = "0.15"
